<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">INSA Cloud</string>
    <string name="event_details">Event</string>
    <string name="title_activity_main">Cloud...</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_login">Login</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_link_to_register">Register Here</string>
    <string name="btn_skip">Skip...</string>
    <string name="btn_register">Register</string>
    <string name="btn_link_to_login">Login Instead</string>
    <string name="register_activity">Register</string>
    <string name="login_activity">Login</string>
    <string name="facebook_app_id">176717182663521</string>
    <string name="logout">Log out</string>
    <string name="title_activity_send_photo">SendPhotoActivity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_event_information">EventInformationActivity</string>

<<<<<<< HEAD
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>

    <string name="event_details_1st_page">Mosaic</string>
    <string name="event_details_2nd_page">Event</string>
    <string name="event_details_3rd_page">Photo</string>
=======
    <string name="title_activity_image_viewer">ImageViewer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
>>>>>>> pinch to zoom

</resources>
